更新 publish.yml 中的最后更新时间格式，确保 UTC 时间正确显示于 index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     </style>
 </head>
 <body>
-        <h1>UNF-Aktivite 部署状态</h1>
+        <h1>UNF-Aktivite</h1>
         <div class="update-time" id="update-time">
-                最后更新时间:
                 <span id="last-update-utc">UTC: 尚未更新</span><br>
                 <span id="last-update-local">本地: 尚未更新</span>
         </div>
