--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-添加 VSCode 设置以固定工作流,并更新 index.html 中的标题和时间显示格式
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +8,8 @@
     </style>
 </head>
 <body>
-        <h1>UNF-Aktivite</h1>
+        <h1>UNF-Aktivite-ics</h1>
+        <h2>Last Update Time</h2>
         <div class="update-time" id="update-time">
             <span id="last-update-utc">UTC: null</span><br>
             <span id="last-update-local">Local: null</span>
