更新 publish.yml 中的运行标题设置方式，并在 index.html 中修复 ICS 链接地址

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <h2>ics subscription links</h2>
     <div>
         <label for="ics-link">KBH:</label>
-        <input id="ics-link" type="text" value="./KBH.ics" readonly style="width:300px;" onclick="this.select()">
+           <input id="ics-link" type="text" value="https://Teddypyf.github.io/UNF-Aktivite-web-screpper/KBH.ics" readonly style="width:400px;" onclick="this.select()">
         <br>
         <label for="ics-link2">Lyngby:</label>
-        <input id="ics-link2" type="text" value="./Lyngby.ics" readonly style="width:300px;" onclick="this.select()">
+           <input id="ics-link2" type="text" value="https://Teddypyf.github.io/UNF-Aktivite-web-screpper/Lyngby.ics" readonly style="width:400px;" onclick="this.select()">
     </div>
         <script>
             // 获取页面中的 UTC 时间(由 workflow 写入)
