--- a/index.html
+++ b/index.html
@@ -14,14 +14,28 @@
         <span id="last-update-utc">UTC: null</span><br>
         <span id="last-update-local">Local: null</span>
     </div>
-    <h2>ics subscription links</h2>
-    <div>
-        <label for="ics-link">KBH:</label>
-           <input id="ics-link" type="text" value="https://Teddypyf.github.io/UNF-Aktivite-web-screpper/KBH.ics" readonly style="width:400px;" onclick="this.select()">
-        <br>
-        <label for="ics-link2">Lyngby:</label>
-           <input id="ics-link2" type="text" value="https://Teddypyf.github.io/UNF-Aktivite-web-screpper/Lyngby.ics" readonly style="width:400px;" onclick="this.select()">
-    </div>
+        <h2>ICS订阅链接</h2>
+        <div id="ics-links"></div>
+        <script>
+            // 动态插入ICS订阅链接,文件名与Python同步
+            const icsFiles = [
+                {slug: 'kbh', name: 'UNF København'},
+                {slug: 'lyngby', name: 'UNF Lyngby'},
+                {slug: 'aalborg', name: 'UNF Aalborg'},
+                {slug: 'aarhus', name: 'UNF Aarhus'},
+                {slug: 'danmark', name: 'UNF Danmark'},
+                {slug: 'odense', name: 'UNF Odense'}
+            ];
+            const repo = 'Teddypyf/UNF-Aktivite-web-screpper';
+            const baseUrl = `https://Teddypyf.github.io/UNF-Aktivite-web-screpper/`;
+            let html = '';
+            icsFiles.forEach((f, i) => {
+                const fname = `unf_events_${f.slug}.ics`;
+                html += `<label for="ics-link${i}">${f.name}:</label>`;
+                html += `<input id="ics-link${i}" type="text" value="${baseUrl}${fname}" readonly style="width:400px;" onclick="this.select()"><br>`;
+            });
+            document.getElementById('ics-links').innerHTML = html;
+        </script>
         <script>
             // 获取页面中的 UTC 时间(由 workflow 写入)
             // 假设 sed 替换的是 UTC 时间
