更新 index.html 中的 baseUrl，以修正 ICS 文件链接地址

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 { slug: 'danmark', name: 'UNF Danmark' },
                 { slug: 'odense', name: 'UNF Odense' }
             ];
-            const baseUrl = `https://Teddypyf.github.io/UNF-Aktivite-web-screpper/`;
+            const baseUrl = `https://teddypyf.github.io/UNF-Aktivite-Web-Scraper/`;
             let html = '';
             icsFiles.forEach((f, i) => {
                 const fname = `unf_events_${f.slug}.ics`;
