--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-更新 index.html 中的 baseUrl,以修正 ICS 文件链接地址
+</html>
     <head>
         <meta charset="UTF-8" />
         <title>Last Update Time</title>
