更新 index.html 和 unf_events_to_ics.py 文件，修改标题为英文并调整 ICS 订阅链接的顺序

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <span id="last-update-local">Local: null</span>
         </div>
 
-        <h2>ICS订阅链接</h2>
+        <h2>ICS subscription links</h2>
         <div id="ics-links"></div>
 
-        <h2>已发布文件列表</h2>
+        <h2>Published Files</h2>
         <div id="file-list">
             <!-- FILE_LIST_START -->
             <!-- FILE_LIST_END -->
@@ -35,10 +35,10 @@
             const icsFiles = [
                 { slug: 'kbh', name: 'UNF København' },
                 { slug: 'lyngby', name: 'UNF Lyngby' },
-                { slug: 'aalborg', name: 'UNF Aalborg' },
                 { slug: 'aarhus', name: 'UNF Aarhus' },
+                { slug: 'odense', name: 'UNF Odense' },
+                { slug: 'aalborg', name: 'UNF Aalborg' },
                 { slug: 'danmark', name: 'UNF Danmark' },
-                { slug: 'odense', name: 'UNF Odense' }
             ];
             const baseUrl = `https://teddypyf.github.io/UNF-Aktivite-Web-Scraper/`;
             let html = '';
